# SEER

./: README.md  planner.rosinstall
map_pred_utils/occ_predictor/: .gitignore  CMakeLists.txt  package.xml
map_pred_utils/occ_predictor/launch/: inference.launch  netnode.launch
map_pred_utils/occ_predictor/models/: model-epoch-19_2.pth  predictor.onnx
map_pred_utils/occ_predictor/src/: common.py  model_dense_nosdf.py  net_node.py
map_pred_utils/occ_predictor_msgs/: CMakeLists.txt  package.xml
planner/active_perception/: CMakeLists.txt  package.xml
planner/active_perception/include/active_perception/: frontier_finder.h  graph_node.h  graph_search.h  heading_planner.h  perception_utils.h
planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp  heading_planner.cpp  perception_utils.cpp
planner/bag/: explore_record.sh
planner/exploration_manager/: CMakeLists.txt  package.xml
planner/exploration_manager/config/: bag.rviz  gazebo.rviz  sim.rviz  traj.rviz
planner/exploration_manager/include/exploration_manager/: bg_exploration_fsm.h  bg_exploration_manager.h  expl_data.h
planner/exploration_manager/launch/: algorithm.xml  exploration.launch  gazebo.launch  gazebo_sim.launch  rviz.launch  spawn_mav.launch  tmux_control.launch  tmux_exploration.launch  tmux_gazebo_sim.launch  tmux_spawn.launch
planner/exploration_manager/models/ground_surface/: model-1_4.sdf  model.config  model.sdf
planner/exploration_manager/models/ground_surface/materials/scripts/: brick_box.material
planner/exploration_manager/models/ground_surface/meshes/: simple_box.dae
planner/exploration_manager/scripts/: tmux_sim.sh
planner/exploration_manager/src/: bg_exploration_fsm.cpp  bg_exploration_manager.cpp  exploration_node.cpp
planner/exploration_manager/worlds/: small_office_new.world
planner/kino_searching/: CMakeLists.txt  package.xml
planner/kino_searching/include/kino_searching/: kino_acc_astar.h  kino_utils.hpp  kino_yaw.h
planner/kino_searching/src/: kino_acc_astar.cpp  kino_yaw.cpp
planner/plan_env/: package.xml
planner/plan_env/include/plan_env/: edt_environment.h  map_ros.h  obj_predictor.h  sdf_map.h
planner/plan_env/src/: edt_environment.cpp  map_ros.cpp  obj_predictor.cpp  sdf_map.cpp
planner/plan_manage/: CMakeLists.txt  package.xml
planner/plan_manage/include/plan_manage/: planner_manager.h  poly_opt.h  sfc_generator.hpp
planner/plan_manage/src/: planner_manager.cpp  poly_opt.cpp
