<?xml version="1.0"?>
<package format="2">
  <name>active_perception</name>
  <version>0.0.0</version>
  <description>The SEER active_perception package</description>

  <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>
  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei Wu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>occ_predictor_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>plan_env</build_export_depend>
  <build_export_depend>path_searching</build_export_depend>
  <build_export_depend>occ_predictor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>occ_predictor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
